# thesis2019

./: Readme.txt
ann-benchmarks/: graph-algos.yaml  requirements.txt
ann-benchmarks/ann_benchmarks/: datasets.py  runner.py
ann-benchmarks/ann_benchmarks/algorithms/: base.py  subprocess.py
ann-benchmarks/ann_benchmarks/algorithms/graph/: kgraph.py  puffinn.py  pynndescent.py  subprocess.py
ann-benchmarks/ann_benchmarks/plotting/: metrics.py  utils.py
ann-benchmarks/install/: Dockerfile.efanna  Dockerfile.kgraph2  Dockerfile.rknng
puffinn/: CMakeLists.txt
puffinn/examples/: graph.cpp
puffinn/include/: collection.hpp  dataset.hpp  filterer.hpp  graph.hpp  maxbuffer.hpp  performance.hpp  prefixmap.hpp  puffinn.hpp
puffinn/include/format/: generic.hpp  real_vector.hpp  set.hpp  unit_vector.hpp
puffinn/include/graph/: bf.hpp  bounded_bucket_size.hpp  common.hpp  descent.hpp  fixed_bucket_size.hpp  fixed_hash.hpp  projection.hpp  varying_hash.hpp
puffinn/include/hash/: crosspolytope.hpp  minhash.hpp  simhash.hpp
puffinn/include/hash_source/: hash_source.hpp  independent.hpp  pool.hpp  tensor.hpp
puffinn/include/similarity_measure/: cosine.hpp  jaccard.hpp  l2.hpp
puffinn/python/example/: example.py
puffinn/python/wrapper/: python_wrapper.cpp
puffinn/test/: code.cpp
puffinn/test/include/: collection_test.hpp  dataset_test.hpp  filterer_test.hpp  format_test.hpp  graph_test.hpp  hash_source_test.hpp  hash_test.hpp  maxbuffer_test.hpp  prefixmap_test.hpp  similarity_measure_test.hpp
